2011-09-14  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.c:
	add RTLD_DEFAULT support in dlsym()

2011-05-19  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.c:
	change '/' to '\' in paths

	* src/lib/evil_inet.c:
	* src/lib/evil_inet.h:
	* src/lib/Evil.h:
	* src/lib/Makefile.am:
	* AUTHORS:
	add inet_pton() function. Implementation from curl library.
	See AUTHORS.

2011-02-27  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	force libtool >= 2.4

2011-02-23  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdio.c:
	make vasprintf() compile on Windows CE

	* src/lib/evil_time.c:
	* src/lib/evil_time.h:
	add stub tzset() for Windows CE

2011-02-04  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	Add asprintf() function.
	Add documentation for vasprintf().
	Use _vcprintf() instead of vsnprintf() to get the length
	of the string, as recommended by MSDN.

2011-01-06  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	better perror() declaration / definition

2011-01-04  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	declare and define getpid() for Windows CE.

2011-01-04  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/dlfcn/dlfcn.h:
	define (temporary) PATH_MAX on Windows CE.
	cegcc has a bug with limits.h.

	* src/lib/evil_stdio.c:
	* src/lib/evil_stdio.h:
	undefine temporary the definition of perror() on Windows CE

2010-12-18  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/libgen.c:
	fix segmentation fault in basename() and dirname()

2010-12-18  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	use _tzset instead of tzset with vc++

2010-12-12  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/evil_libgen.c:
	* src/lib/evil_libgen.h:
	add dirname() function
